syntax = "proto3";

package kms;

option go_package = "github.com/bandprotocol/falcon/internal/kms;kms";

service KmsEvmService {
  rpc SignEvm(SignEvmRequest) returns (SignEvmResponse) {}
}

message SignEvmRequest {
    string addr = 1;
    bytes message = 2;
}

message SignEvmResponse {
    bytes signature = 1;
}
